# coze-studio

./: .gitignore  rush.json
frontend/apps/coze-studio/: package.json
frontend/apps/coze-studio/src/pages/: simulation.tsx
frontend/apps/coze-studio/src/routes/: async-components.tsx  index.tsx
orion/: ORION-MOONSHOT-v1.0.md  README.md  pyproject.toml
orion/orion/: __init__.py  __main__.py  cli.py  platform.py
orion/orion/contracts/: CONTRACT_TEMPLATE.md  __init__.py  base_module.py
orion/orion/modules/: __init__.py
orion/orion/modules/architect/: CONTRACT.md  __init__.py  cycle.py  module.py
orion/orion/modules/echomerce/: CONTRACT.md  __init__.py  module.py
orion/orion/modules/griefdao/: CONTRACT.md  __init__.py  module.py
orion/orion/modules/soulprint/: CONTRACT.md  __init__.py  module.py
orion/orion/spine/: __init__.py  api_gateway.py  config.py  event_bus.py  mcp_server.py  provider_manager.py  registry.py
orion/orion/utils/: __init__.py  markdown.py
orion/tests/: test_issue_fixes.py  test_platform.py
